--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.8
   crypto: ^3.0.6
+  http: ^1.4.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
